--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,26 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* styles/globals.css or a custom CSS file */
+
+/* Customize the NProgress loading bar */
+#nprogress {
+  pointer-events: none;
+}
+#nprogress .bar {
+  background: #29d; /* Change to your preferred color */
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px; /* Adjust the height as you prefer */
+}
+#nprogress .peg {
+  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+}
+#nprogress .spinner {
+  display: none; /* Hide the spinner if not needed */
+}
